# test-buildcmake

./: .gitignore  CMakeLists.txt
src/certs/: Readme.md
src/default/: app.conf.in  distsearch.conf  server.conf
src/local/: Readme.md
